--- a/css/blog.css
+++ b/css/blog.css
@@ -30,21 +30,7 @@
     height: 100%;
     background-position: center center;
     background-size: cover;
-}
-.blog-card-bg-1{
-    background-image: url(../images/single-blog-image-bg-1.jpg);
-}
-.blog-card-bg-2{
-    background-image: url(../images/single-blog-image-bg-2.jpg);
-}
-.blog-card-bg-3{
-    background-image: url(../images/single-blog-image-bg-3.jpg);
-}
-.blog-card-bg-4{
-    background-image: url(../images/single-blog-image-bg-4.jpg);
-}
-.blog-card-bg-5{
-    background-image: url(../images/single-blog-image-bg-5.jpg);
+    background-repeat: no-repeat;
 }
 @media(max-width: 992px){
     .blog-card-bg{
