--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ ul{
 
 /* Section Construction */
 .construction-area-info img{
-    max-width: 100%;
+    width: 100%;
 }
 .single-icon i{
     background: #ffc527;
@@ -117,11 +117,26 @@ ul{
     line-height: 60px;
     color: #fff;
 }
+@media (max-width: 798px){
+    .construction-area-info img{
+        width: 40%;
+        height: 150px;
+    }
+
+}
 /* Section testimonials*/
 .testimonials-item img{
     width: 150px;
     height: 100px;
     border-radius: 50%;
+}
+/* Section who are we */
+@media (max-width: 798px){
+    iframe{
+       margin: 10px;
+       width: 100%;
+    }
+
 }
 /* Section Subscribe */
 .subscribe{
